--- a/BasicSignUpForm/Nati.html
+++ b/BasicSignUpForm/Nati.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fork Pracice </title>
-</head>
-<body>
-    Hi Ansar ! This is Nati from Group 3 !
-    Thank you for allowing me to collaborate.
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fork Pracice</title>
+  </head>
+  <body>
+    Hi Ansar ! This is Nati from Group 3 ! Thank you for allowing me to
+    collaborate.
+    <div>
+      <h4>practice</h4>
+    </div>
+  </body>
 </html>
